bug fix projects alignment
animation was being cut off on left side. Removed margin on ProjectContainer and accounted for it in absolute position of each ProjectTile

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ a {
   width: 100%;
   height: auto;
 }
+
 #landing {
   position: relative;
   text-align: center;
@@ -226,7 +227,6 @@ h1 {
   height: 590px;
   position: relative;
   overflow: hidden;
-  margin-left: 35px;
 }
 .tileWrapper{
   // border: 1px solid red;
